tests/duarouter/alternatives/style2_input/errors/xml/missing_element_end/errors.duarouter
Error: expected end of tag 'routeDistribution'
 In file 'input_alts.rou.alt.xml'
 At line/column 14/6.

Quitting (on error).
